# super-terminal

./: .confluxrc  .gitignore  .releaserc  Cargo.toml  LICENSE  README.md  babel.config.js  dmg.arm64.json  dmg.json  install.sh  main.js  ormconfig.json  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  rollup.mesh.json  test  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-release.yaml  release.yaml  semantic-release.yaml  temp.yaml
.husky/: pre-push  prepare-commit-msg
crates/super-terminal/: Cargo.toml
crates/super-terminal/src/: cleanup.rs  config.rs  history.rs  lib.rs  main.rs  server.rs
crates/super-terminal/src/db/: mod.rs  models.rs  queries.rs
crates/super-terminal/src/pty/: mod.rs  process.rs
crates/super-terminal/src/ws/: broadcast.rs  mod.rs  protocol.rs
crates/super-terminal/src/ws/routes/: mod.rs  project.rs  shell_script.rs  terminal.rs
crates/tauri-plugin-sessions/: Cargo.toml  build.rs
crates/tauri-plugin-sessions/permissions/: default.toml
crates/tauri-plugin-sessions/permissions/autogenerated/: reference.md
crates/tauri-plugin-sessions/permissions/autogenerated/commands/: connect_session.toml  create_session.toml  delete_session.toml  list_sessions.toml  update_session.toml
crates/tauri-plugin-sessions/permissions/schemas/: schema.json
crates/tauri-plugin-sessions/src/: commands.rs  error.rs  lib.rs  menu.rs  models.rs  ssh.rs  storage.rs  tray.rs
crates/tauri-plugin-sessions/ui/: index.html  package.json  vite.config.ts
crates/tauri-plugin-sessions/ui/src/: App.tsx  SessionForm.tsx
desktop/: package.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
desktop/src/: main.js
electron/: main.js  menu.js  package-lock.json  package.json
icons/: super-terminal.icns
src/: App.css  App.tsx  config.json  data-source.ts  index.ts  main.tsx  run-server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/entity/: HistoryHash.ts  Project.ts  ShellScript.ts  Terminal.ts  TerminalCommand.ts  TerminalLog.ts  TerminalLogArchive.ts  TerminalSetting.ts
src/routes/: project.ts  projectShellScript.ts  temp.json  terminal.ts
src/services/: group.ts  project.ts  shellScript.ts  terminals.ts
src/utils/: Terminal.ts  dom.ts  (+9 more)
ui/: .env  .env.production  .gitignore  README.md  craco.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+46 files in other folders)
