[package]
name = "super-terminal-tauri"
version = "0.1.0" # x-release-please-version
edition = "2021"

[dependencies]
super-terminal = { path = "../crates/super-terminal" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
