[package]
name = "super-terminal"
version = "0.1.0" # x-release-please-version
edition = "2021"
license = "MIT"
description = "A terminal management server with PTY support, WebSocket protocol, and SQLite persistence"
repository = "https://github.com/bugwheels94/super-terminal"
keywords = ["terminal", "pty", "websocket", "server"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "super-terminal"
path = "src/main.rs"

[lib]
name = "super_terminal"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# HTTP & WebSocket
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# PTY
portable-pty = "0.8"

# Config & CLI
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"

# Utilities
sha1 = "0.10"
futures = "0.3"

# Embedded UI
rust-embed = "8"
mime_guess = "2"
