[package]
name = "tauri-plugin-sessions"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 plugin for multi-session management with tray, menu, and SSH tunneling"
links = "tauri-plugin-sessions"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["process", "io-util", "time"] }
dirs = "6"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
